ficed width issue on smaller screen sizes

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  min-width:fit-content;
 }
 
 .fried-chicken {
